# empty-euler

./: .gitignore  Cargo.toml  build.rs
benches/: primegen.rs  primes.rs  sieve.rs
src/: core.rs  infra.rs  main.rs  math.rs
src/math/: algo.rs  bfs.rs  bits.rs  digits.rs  dirichlet.rs  int.rs  iter.rs  lp.rs  modular.rs  partition.rs  permutation.rs  poly.rs  primes.rs  seq.rs  sieve.rs  util.rs
src/math/seq/: kreg.rs
