[package]
name = "pe"
version = "0.9.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
debug = 1
strip = false

[profile.bench]
inherits = "release"
debug = 1


[lib]
name = "pe_lib"
path = "src/core.rs"

[[bin]]
name = "pe_solns"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rug = { version = "1.27.0", features = ["num-traits"] }
gmp-mpfr-sys = { version = "1.6.5", features = ["use-system-libs"] }
num-traits = "0.2.19"
num-integer = "0.1.46"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
static_assertions = "1.1.0"
fixedbitset = "0.5.7"
good_lp = { version = "1.14.0" }
rand_distr = "0.5.1"
rand = "0.9.2"
rayon = "1.11.0"
facto = "0.3.1"
ndarray = "0.16.1"
itertools = "0.14.0"
petgraph = "0.8.2"
priority-queue = "2.6.0"
ahash = "0.8.12"
f128 = "0.2.9"
regex = "1.11.3"
thin-vec = "0.2.14"
dary_heap = "0.3.8"
pathfinding = "4.14.0"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "primegen"
harness = false

[[bench]]
name = "primes"
harness = false

[[bench]]
name = "sieve"
harness = false
